--- a/article/CoMixNL_supplement.tex
+++ b/article/CoMixNL_supplement.tex
@@ -1,13 +1,42 @@
 \documentclass[fleqn,10pt]{wlscirep}
-
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-%\usepackage[singlelinecheck=off]{caption}
 
+\title{Supplementary information to ``Dynamics of non-household contacts during the COVID-19 pandemic in 2020 and 2021 in the Netherlands''}
+
+\author[1,*]{Jantien A. Backer}
+\author[1]{Laurens Bogaardt}
+\author[2]{Philippe Beutels}
+\author[3]{Pietro Coletti}
+\author[4]{W. John Edmunds}
+\author[4]{Amy Gimma}
+\author[1]{Cheyenne C. E. van Hagen}
+\author[3]{Niel Hens}
+\author[4]{Christopher I. Jarvis}
+\author[1]{Eric R. A. Vos}
+\author[3]{James Wambua}
+\author[1]{Denise Wong}
+\author[4]{Kevin van Zandvoort}
+\author[1,5]{Jacco Wallinga}
+\affil[1]{National Institute for Public Health and the Environment, Bilthoven, the Netherlands}
+\affil[2]{University of Antwerp, Antwerp, Belgium}
+\affil[3]{UHasselt, Data Science Institute and I-BioStat, Hasselt, Belgium}
+\affil[4]{London School of Hygiene and Tropical Medicine, London, United Kingdom}
+\affil[5]{Leiden University Medical Center, Leiden, the Netherlands}
+
+\affil[*]{jantien.backer@rivm.nl}
+
+\keywords{COVID-19, SARS-CoV-2 virus, contact survey, control measures}
+
+\begin{abstract}
+The COVID-19 pandemic was in 2020 and 2021 for a large part mitigated by reducing contacts in the general population. To monitor how these contacts changed over the course of the pandemic in the Netherlands, a longitudinal survey was conducted where participants reported on their at-risk contacts every two weeks, as part of the European CoMix survey. The survey included 1659 participants from April to August 2020 and 2514 participants from December 2020 to September 2021.
+
+We categorized the number of unique contacted persons excluding household members, reported per participant per day into six activity levels, defined as 0, 1, 2, 3-4, 5-9 and 10 or more reported contacts. After correcting for age, vaccination status, risk status for severe outcome of infection, and frequency of participation, activity levels increased over time, coinciding with relaxation of COVID-19 control measures.
+
+\end{abstract}
 \begin{document}
 
-\section*{Supplementary information to ``Dynamics of non-household contacts during the COVID-19 pandemic in 2020 and 2021 in the Netherlands''}
-
+\maketitle
 
 \renewcommand{\thefigure}{S\arabic{figure}}
 \setcounter{figure}{0}
@@ -59,7 +88,7 @@ year & round & 0-11 & 12-17 & 18-24 & 25-34 & 35-44 & 45-54 & 55-64 & 65+ & tota
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\linewidth]{../figures/participant_rounds.png}
+\includegraphics[width=\linewidth]{../figures/participant_rounds.pdf}
 \caption{Number of participants by survey round and participant round (i.e. the n\textsuperscript{th} time a participant participated). Series 2020 (left) consisted of 8 rounds, series 2021 (right) consisted of 20 rounds. Most participants participated for the first time the start of the series, but some also started during the study period. The panel was supplemented to the target population in round 11 of series 2021.}
 \label{fig:part_round}
 \end{figure}
@@ -115,9 +144,23 @@ Significance levels: *** (p-value $<$ 0.001), ** (p-value $<$ 0.01), * (p-value 
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\linewidth]{../figures/results_splines.png}
+\includegraphics[width=\linewidth]{../figures/results_splines.pdf}
 \caption{Results for non-stationary fixed effects of generalised additive model, by series (2020, 2021) and age group (0-17, 16-64, 65+). Calendar time (expressed as days since first survey), participant age, and participant round (i.e. the n\textsuperscript{th} time a participant participated) are included as cubic splines. Shown are the fitted splines (solid lines) $\pm$ the standard error (dashed lines).}
 \label{fig:splines}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\linewidth]{../figures/fit_studypopulation_nb.pdf}
+\caption{Fitted and observed number of contacts over time by series (columns) and age group (rows), with and without setting a maximum for the number of contacts. The model fits per round are shown by the median (lines) and 95\% interval (shaded), from the first to last participation date of the survey round. The mean observed number of contacts, without and with set maximum are placed at the start and end of the survey round (circles, with 95\% CI errorbars). Holidays and school holiday periods are shaded in grey. Only 0.8\% of the observations are higher than 50, but they lead to much higher and more uncertain estimates. Setting a maximum yields the same trends in contact behaviour as our results but also disregards the heavy tails of the distribution of number of contacts. }
+\label{fig:nb}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\linewidth]{../figures/fit_studypopulation_series.pdf}
+\caption{Fitted and observed activity levels over time by series. Activity levels are shown as the fraction of participants that report more than a certain number of non-household contacts per day. With five limits (>0, >1, >2, >4 and >9) six activity levels are defined, e.g. the fraction between the limits of >2 and >4 is the activity level that represents 3 or 4 contacts per participant. The model fits per round are shown by the median (lines) and 95\% interval (shaded), from the first to last participation date of that survey round. The observed activity levels per round (open circles) are placed at the mean participation date of that survey round. Holidays and school holiday periods are shaded in grey. The model presented in the main text distinguishes between 3 age groups (0-17, 18-64, and 65+), while here they are analysed together. Participant age is modelled with a spline over the full age range. Although not markedly different from the main results, this analysis fails to capture any interactions between age group and calendar time, for instance when the oldest age group increased their contacts in 2021 later than the rest of the population (see Fig. S2).}
+\label{fig:agedep}
 \end{figure}
 
 
