Update references for revision

--- a/article/references.bib
+++ b/article/references.bib
@@ -7,9 +7,20 @@
    Volume="26",
    Number="8",
    Month="02",
-   doi = "http://dx.doi.org/10.2807/1560-7917.ES.2021.26.8.2000994"
+   doi = "http://doi.org/10.2807/1560-7917.ES.2021.26.8.2000994"
 }
 
+@Article{Blomaard_2021,
+   Author="Blomaard, L. C.  and van der Linden, C. M. J.  and van der Bol, J. M.  and Jansen, S. W. M.  and Polinder-Bos, H. A.  and Willems, H. C.  and Festen, J.  and Barten, D. G.  and Borgers, A. J.  and Bos, J. C.  and van den Bos, F.  and de Brouwer, E. J. M.  and van Deudekom, F. J. A.  and van Dijk, S. C.  and Emmelot-Vonk, M. H.  and Geels, R. E. S.  and van de Glind, E. M. M.  and de Groot, B.  and Hempenius, L.  and Kamper, A. M.  and Kampschreur, L. M.  and de Koning, M. M. M.  and Labots, G.  and Looman, R.  and Lucke, J. A.  and Maas, H. A. A. M.  and Mattace-Raso, F. U. S.  and El Moussaoui, R.  and van Munster, B. C.  and van Nieuwkoop, C.  and Oosterwijk, L. B. L. E.  and Regtuijt, M. E. M.  and Robben, S. H. M.  and Ruiter, R.  and Salarbaks, A. M.  and Schouten, H. J.  and Smit, O. M.  and Smits, R. A. L.  and Spies, P. E.  and Vreeswijk, R.  and de Vries, O. J.  and Wijngaarden, M. A.  and Wyers, C. E.  and Mooijaart, S. P. ",
+   Title="{{F}railty is associated with in-hospital mortality in older hospitalised {C}{O}{V}{I}{D}-19 patients in the {N}etherlands: the {C}{O}{V}{I}{D}-{O}{L}{D} study}",
+   Journal="Age Ageing",
+   Year="2021",
+   Volume="50",
+   Number="3",
+   Pages="631--640",
+   Month="May",
+   doi = "http://doi.org/10.1093/ageing/afab018"
+}
 
 @Article{Bosetti_2021,
    Author="Bosetti, P.  and Huynh, B. T.  and Abdou, A. Y.  and Sanchez, M.  and Eisenhauer, C.  and Courtejoie, N.  and Accardo, J.  and Salje, H.  and Guillemot, D.  and Moslonka-Lefebvre, M.  and Boëlle, P. Y.  and Béraud, G.  and Cauchemez, S.  and Opatowski, L. ",
@@ -19,7 +30,7 @@
    Volume="26",
    Number="48",
    Month="12",
-   doi = "http://dx.doi.org/10.2807/1560-7917.ES.2021.26.48.2001636"
+   doi = "http://doi.org/10.2807/1560-7917.ES.2021.26.48.2001636"
 }
 
 @MISC{CBS_2021,
@@ -30,7 +41,6 @@
    note = "[Online; accessed 1 July 2021]"
 }
 
-
 @Article{Coletti_2020,
    Author="Coletti, P.  and Wambua, J.  and Gimma, A.  and Willem, L.  and Vercruysse, S.  and Vanhoutte, B.  and Jarvis, C. I.  and Van Zandvoort, K.  and Edmunds, J.  and Beutels, P.  and Hens, N. ",
    Title="{{C}o{M}ix: comparing mixing patterns in the {B}elgian population during and after lockdown}",
@@ -40,9 +50,8 @@
    Number="1",
    Pages="21885",
    Month="12",
-   doi = "https://dx.doi.org/10.1038/s41598-020-78540-7"
+   doi = "https://doi.org/10.1038/s41598-020-78540-7"
 }
-
 
 @Article{Coletti_2021,
    Author="Coletti, P.  and Libin, P.  and Petrof, O.  and Willem, L.  and Abrams, S.  and Herzog, S. A.  and Faes, C.  and Kuylen, E.  and Wambua, J.  and Beutels, P.  and Hens, N. ",
@@ -53,9 +62,8 @@
    Number="1",
    Pages="503",
    Month="May",
-   doi = "https://dx.doi.org/10.1186/s12879-021-06092-w"
+   doi = "https://doi.org/10.1186/s12879-021-06092-w"
 }
-
 
 @Article{Drolet_2022,
    Author="Drolet, M.  and Godbout, A.  and Mondor, M.  and Béraud, G.  and Drolet-Roy, L.  and Lemieux-Mellouki, P.  and Bureau, A.  and Demers, É.  and Boily, M. C.  and Sauvageau, C.  and De Serres, G.  and Hens, N.  and Beutels, P.  and Dervaux, B.  and Brisson, M. ",
@@ -66,7 +74,7 @@
    Number="1",
    Pages="1032",
    Month="05",
-   doi = "https://dx.doi.org/10.1186/s12889-022-13402-7"
+   doi = "https://doi.org/10.1186/s12889-022-13402-7"
 }
 
 @Article{Feehan_2021,
@@ -78,8 +86,7 @@
    Number="1",
    Pages="893",
    Month="02",
-   doi = "https://dx.doi.org/10.1038/s41467-021-20990-2"
-
+   doi = "https://doi.org/10.1038/s41467-021-20990-2"
 }
 
 @Article{Franco_2022,
@@ -92,6 +99,18 @@
    Pages="e1009965",
    Month="03",
    doi =  "https://doi.org/10.1371/journal.pcbi.1009965"
+}
+
+@Article{Freedman_2022,
+   Author="Freedman, V. A.  and Hu, M.  and Kasper, J. D. ",
+   Title="{{C}hanges in {O}lder {A}dults' {S}ocial {C}ontact {D}uring the {C}{O}{V}{I}{D}-19 {P}andemic}",
+   Journal="J Gerontol B Psychol Sci Soc Sci",
+   Year="2022",
+   Volume="77",
+   Number="7",
+   Pages="e160-e166",
+   Month="Jul",
+   doi = "https://doi.org/10.1093/geronb/gbab166"
 }
 
 @Article{Gimma_2022,
@@ -113,6 +132,18 @@
   year = {2022}
 }
 
+@Article{Hewitt_2020,
+   Author="Hewitt, J.  and Carter, B.  and Vilches-Moraga, A.  and Quinn, T. J.  and Braude, P.  and Verduri, A.  and Pearce, L.  and Stechman, M.  and Short, R.  and Price, A.  and Collins, J. T.  and Bruce, E.  and Einarsson, A.  and Rickard, F.  and Mitchell, E.  and Holloway, M.  and Hesford, J.  and Barlow-Pay, F.  and Clini, E.  and Myint, P. K.  and Moug, S. J.  and McCarthy, K.  and Davey, C.  and Jones, S.  and Lunstone, K.  and Cavenagh, A.  and Silver, C.  and Telford, T.  and Simmons, R.  and Mutasem, T. E. J.  and Singh, S.  and Paxton, D.  and Harris, W.  and Galbraith, N.  and Bhatti, E.  and Edwards, J.  and Duffy, S.  and Bisset, C.  and Alexander, R.  and Garcia, M.  and Sangani, S.  and Kneen, T.  and Lee, T.  and McGovern, A.  and Guaraldi, G. ",
+   Title="{{T}he effect of frailty on survival in patients with {C}{O}{V}{I}{D}-19 ({C}{O}{P}{E}): a multicentre, {E}uropean, observational cohort study}",
+   Journal="Lancet Public Health",
+   Year="2020",
+   Volume="5",
+   Number="8",
+   Pages="e444-e451",
+   Month="Aug",
+   doi = "https://doi.org/10.1016/s2468-2667(20)30146-8"
+}
+
 @Article{Hoang_2019,
    Author="Hoang, T.  and Coletti, P.  and Melegaro, A.  and Wallinga, J.  and Grijalva, C. G.  and Edmunds, J. W.  and Beutels, P.  and Hens, N. ",
    Title="{{A} {S}ystematic {R}eview of {S}ocial {C}ontact {S}urveys to {I}nform {T}ransmission {M}odels of {C}lose-contact {I}nfections}",
@@ -122,7 +153,7 @@
    Number="5",
    Pages="723--736",
    Month="Sep",
-   doi = "http://dx.doi.org/10.1097/EDE.0000000000001047"
+   doi = "http://doi.org/10.1097/EDE.0000000000001047"
 }
 
 @Article{Jarvis_2020,
@@ -134,7 +165,7 @@
    Number="1",
    Pages="124",
    Month="05",
-   doi = "http://dx.doi.org/10.1186/s12916-020-01597-8"
+   doi = "http://doi.org/10.1186/s12916-020-01597-8"
 }
 
 @Article{Jarvis_2021,
@@ -146,7 +177,7 @@
    Number="1",
    Pages="52",
    Month="02",
-   doi = "http://dx.doi.org/10.1186/s12916-021-01924-7"
+   doi = "http://doi.org/10.1186/s12916-021-01924-7"
 }
 
 @Article{Latsuzbaia_2020,
@@ -157,7 +188,31 @@
    Volume="15",
    Number="8",
    Pages="e0237128",
-   doi = "http://dx.doi.org/10.1371/journal.pone.0237128"
+   doi = "http://doi.org/10.1371/journal.pone.0237128"
+}
+
+@Article{Levin_2020,
+   Author="Levin, A. T.  and Hanage, W. P.  and Owusu-Boaitey, N.  and Cochran, K. B.  and Walsh, S. P.  and Meyerowitz-Katz, G. ",
+   Title="{{A}ssessing the age specificity of infection fatality rates for {C}{O}{V}{I}{D}-19: systematic review, meta-analysis, and public policy implications}",
+   Journal="Eur J Epidemiol",
+   Year="2020",
+   Volume="35",
+   Number="12",
+   Pages="1123--1138",
+   Month="Dec",
+   doi = "http://doi.org/10.1007/s10654-020-00698-1"
+}
+
+@Article{McCreesh_2021,
+   Author="McCreesh, N.  and Dlamini, V.  and Edwards, A.  and Olivier, S.  and Dayi, N.  and Dikgale, K.  and Nxumalo, S.  and Dreyer, J.  and Baisley, K.  and Siedner, M. J.  and White, R. G.  and Herbst, K.  and Grant, A. D.  and Harling, G. ",
+   Title="{{I}mpact of the {C}ovid-19 epidemic and related social distancing regulations on social contact and {S}{A}{R}{S}-{C}o{V}-2 transmission potential in rural {S}outh {A}frica: analysis of repeated cross-sectional surveys}",
+   Journal="BMC Infect Dis",
+   Year="2021",
+   Volume="21",
+   Number="1",
+   Pages="928",
+   Month="Sep",
+   doi = "http://doi.org/10.1186/s12879-021-06604-8"
 }
 
 @Article{Mossong_2008,
@@ -169,7 +224,7 @@
   Number="3",
   Pages="e74",
   Month="Mar",
-  doi = "http://dx.doi.org/10.1371/journal.pmed.0050074"
+  doi = "http://doi.org/10.1371/journal.pmed.0050074"
 }
 
 @Article{Munday_2021,
@@ -181,7 +236,7 @@
    Number="1",
    Pages="233",
    Month="09",
-   doi = "http://dx.doi.org/10.1186/s12916-021-02107-0"
+   doi = "http://doi.org/10.1186/s12916-021-02107-0"
 }
 
 @misc{Nivel_2021,
@@ -192,7 +247,6 @@
   note = "[Online; accessed 8 August 2022]"
 }
 
-
 @Article{Quaife_2020,
    Author="Quaife, M.  and van Zandvoort, K.  and Gimma, A.  and Shah, K.  and McCreesh, N.  and Prem, K.  and Barasa, E.  and Mwanga, D.  and Kangwana, B.  and Pinchoff, J.  and Edmunds, W. J.  and Jarvis, C. I.  and Austrian, K.  and Bosse, N. I.  and Medley, G.  and O'Reilly, K.  and Leclerc, Q. J.  and Jit, M.  and Lowe, R.  and Davies, N. G.  and Deol, A. K.  and Knight, G. M.  and Auzenbergs, M.  and Edmunds, W. J.  and Atkins, K. E.  and Jombart, T.  and Eggo, R. M.  and Foss, A. M.  and Flasche, S.  and Pearson, C. A. B.  and Nightingale, E. S.  and Munday, J. D.  and Abbott, S.  and Quilty, B. J.  and Gibbs, H. P.  and Simons, D.  and Emery, J. C.  and Hué, S.  and Liu, Y.  and Tully, D. C.  and Rosello, A.  and Procter, S. R.  and Endo, A.  and Russell, T. W.  and Rees, E. M.  and Diamond, C.  and Meakin, S. R.  and Kucharski, A. J.  and Gore-Langton, G. R.  and Klepac, P.  and Hellewell, J.  and Sun, F. Y.  and Houben, R. M. G. J.  and Villabona-Arenas, C. J.  and Funk, S.  and Clifford, S.  and Brady, O. ",
    Title="{{T}he impact of {C}{O}{V}{I}{D}-19 control measures on social contacts and transmission in {K}enyan informal settlements}",
@@ -202,7 +256,7 @@
    Number="1",
    Pages="316",
    Month="10",
-   doi = "http://dx.doi.org/10.1186/s12916-020-01779-4"
+   doi = "http://doi.org/10.1186/s12916-020-01779-4"
 }
 
 @Manual{R_2022,
@@ -231,7 +285,7 @@
    Number="2",
    Pages="452--462",
    Month="02",
-   doi = "http://dx.doi.org/10.3201/eid2702.203412"
+   doi = "http://doi.org/10.3201/eid2702.203412"
 }
 
 @Inbook{Tagore_2015,
@@ -245,10 +299,8 @@ year="2015",
 publisher="Springer International Publishing",
 address="Cham",
 pages="1--25",
-abstract="The mission of this chapter is to introduce the concept of epidemic outbursts in network structures, especially in case of scale-free networks. The invasion phenomena of epidemics have been of tremendous interest among the scientific community over many years, due to its large scale implementation in real world networks. This chapter seeks to make readers understand the critical issues involved in epidemics such as propagation, spread and their combat which can be further used to design synthetic and robust network architectures. The primary concern in this chapter focuses on the concept of Susceptible-Infectious-Recovered (SIR) and Susceptible-Infectious-Susceptible (SIS) models with their implementation in scale-free networks, followed by developing strategies for identifying the damage caused in the network. The relevance of this chapter can be understood when methods discussed in this chapter could be related to contemporary networks for improving their performance in terms of robustness. The patterns by which epidemics spread through groups are determined by the properties of the pathogen carrying it, length of its infectious period, its severity as well as by network structures within the population. Thus, accurately modeling the underlying network is crucial to understand the spread as well as prevention of an epidemic. Moreover, implementing immunization strategies helps control and terminate theses epidemics.",
 isbn="978-3-319-15916-4",
-doi = "http://dx.doi.org/10.1007/978-3-319-15916-4_1",
-url="https://doi.org/10.1007/978-3-319-15916-4_1"
+doi = "http://doi.org/10.1007/978-3-319-15916-4_1",
 }
 
 @Article{Tomori_2021,
@@ -260,7 +312,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Number="1",
    Pages="271",
    Month="10",
-   doi = "http://dx.doi.org/10.3201/doi: 10.1186/s12916-021-02139-6"
+   doi = "http://doi.org/10.1186/s12916-021-02139-6"
 }
 
 @Article{Verelst_2021,
@@ -272,7 +324,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Number="1",
    Pages="254",
    Month="09",
-   doi = "http://dx.doi.org/10.1186/s12916-021-02133-y"
+   doi = "http://doi.org/10.1186/s12916-021-02133-y"
 }
 
 @Article{Vos_2020,
@@ -281,7 +333,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Journal="J Epidemiol Community Health",
    Year="2020",
    Month="Nov",
-      doi = "http://dx.doi.org/10.1136/jech-2020-215678"
+   doi = "http://doi.org/10.1136/jech-2020-215678"
 }
 
 @Article{Vos_2021,
@@ -293,7 +345,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Number="12",
    Pages="2318--2321",
    Month="12",
-   doi = "http://dx.doi.org/10.1093/cid/ciab264"
+   doi = "http://doi.org/10.1093/cid/ciab264"
 }
 
 @Article{Wallinga_2006,
@@ -305,7 +357,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
   Number="10",
   Pages="936--944",
   Month="Nov",
-  doi = "http://dx.doi.org/10.1093/aje/kwj317"
+  doi = "http://doi.org/10.1093/aje/kwj317"
 }
 
 @Article{Wambua_2022,
@@ -317,16 +369,19 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Number="1",
    Pages="5192",
    Month="03",
-   doi = "http://dx.doi.org/10.1038/s41598-022-09037-8"
+   doi = "http://doi.org/10.1038/s41598-022-09037-8"
 }
 
-
 @Article{Wong_2022a,
-   Author="Wong, K. L. M. and Gimma, A. and Paixao, E. S. and {CoMix Europe Working Group} and Faes, C. and Beutels, P. and Hens, N. and Jarvis, C. I. and Edmunds, W. J.",
+    Author="Wong, K. L. M.  and Gimma, A.  and Paixao, E. S.  and Faes, C.  and Beutels, P.  and Hens, N.  and Jarvis, C. I.  and Edmunds, W. J.  and Paolotti, D.  and Karch, A.  and ger, V.  and Baruch, J.  and Melillo, T.  and Hudeckova, H.  and Rosinska, M.  and Niedzwiedzka-Stadnik, M.  and Fischer, K.  and Vorobjov, S.  and najalg, H.  and Althaus, C.  and Low, N.  and Reichmuth, M.  and Auranen, K.  and Nurhonen, M.  and ć, G.  and Makaric, Z. L.  and Namorado, S.  and Caetano, C.  and Santos, A. J.  and st, G.  and Oroszi, B.  and Karsai, M.  and Fafangel, M.  and Klepac, P.  and Kranjec, N.  and Vilaplana, C.  and Casabona, J. ",
    Title="{{P}regnancy during {C}{O}{V}{I}{D}-19: social contact patterns and vaccine coverage of pregnant women from {C}o{M}ix in 19 {E}uropean countries}",
-   Journal="medRxiv",
+   Journal="BMC Pregnancy Childbirth",
    Year="2022",
-   doi = "http://dx.doi.org/10.1101/2022.06.01.22275775"
+   Volume="22",
+   Number="1",
+   Pages="757",
+   Month="Oct",
+   doi = "http://doi.org/10.1186/s12884-022-05076-1"
 }
 
 @Article{Wong_2022b,
@@ -334,7 +389,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Title="{{S}ocial contact patterns during the {C}{O}{V}{I}{D}-19 pandemic in 21 {E}uropean countries – evidence from a two-year study}",
    Journal="medRxiv",
    Year="2022",
-   doi = "http://dx.doi.org/10.1101/2022.07.25.22277998"
+   doi = "http://doi.org/10.1101/2022.07.25.22277998"
 }
 
 @Book{Wood_2017,
@@ -348,10 +403,10 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
 @misc{Zenodo_2022,
   author = {Backer, J. A. and Bogaardt, L. and Wallinga, J.},
   title = {{C}o{M}ix social contact data ({N}etherlands)},
-  howpublished = "\url{http://zenodo.org/record/4790347\#.YwTvc3ZByUm/}",
+  howpublished = "\url{https://zenodo.org/record/7276465\#.Y-Sk28nMKUk}",
   year = {2022}, 
-  note = "[Online; accessed 19 July 2022]",
-  doi = "https://dx.doi.org/10.5281/zenodo.4790347"
+  note = "[Online; accessed 9 February 2023]",
+  doi = "https://doi.org/10.5281/zenodo.7276465"
 }
 
 @Article{Zhang_2020,
@@ -363,7 +418,7 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    Number="6498",
    Pages="1481--1486",
    Month="06",
-   doi = "http://dx.doi.org/10.1126/science.abb8001"
+   doi = "http://doi.org/10.1126/science.abb8001"
 }
 
 
